==> KitSprout/KDWM1000/Software/KDWM_ApplicationSTD_mahonyFilter/Program/modules/imu.c <==
#include "drivers\stm32f4_system.h"
#include "drivers\stm32f4_spi.h"
#include "modules\imu.h"
#include <stdio.h>
#include <string.h>
#define IMU_SPIx                    SPI1
#define IMU_SPIx_CLK_ENABLE()       RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI1, ENABLE)
#define IMU_SPIx_SPEED_HIGH         SPI_BaudRatePrescaler_2
#define IMU_SPIx_SPEED_LOW          SPI_BaudRatePrescaler_256
#define IMU_SCK_PIN                 GPIO_Pin_5
#define IMU_SCK_GPIO_PORT           GPIOA
#define IMU_SCK_AF                  GPIO_AF_SPI1
#define IMU_SCK_SOURCE              GPIO_PinSource5
#define IMU_SDO_PIN                 GPIO_Pin_6
#define IMU_SDO_GPIO_PORT           GPIOA
#define IMU_SDO_AF                  GPIO_AF_SPI1
#define IMU_SDO_SOURCE              GPIO_PinSource6
#define IMU_SDI_PIN                 GPIO_Pin_7
#define IMU_SDI_GPIO_PORT           GPIOA
#define IMU_SDI_AF                  GPIO_AF_SPI1
#define IMU_SDI_SOURCE              GPIO_PinSource7
#define IMU_CSM_PIN                 GPIO_Pin_4
#define IMU_CSM_GPIO_PORT           GPIOA
#define IMU_CSM_H()                 __GPIO_SET(IMU_CSM_GPIO_PORT, IMU_CSM_PIN)
#define IMU_CSM_L()                 __GPIO_RST(IMU_CSM_GPIO_PORT, IMU_CSM_PIN)
#define IMU_CSB_PIN                 GPIO_Pin_0
#define IMU_CSB_GPIO_PORT           GPIOB
#define IMU_CSB_H()                 __GPIO_SET(IMU_CSB_GPIO_PORT, IMU_CSB_PIN)
#define IMU_CSB_L()                 __GPIO_RST(IMU_CSB_GPIO_PORT, IMU_CSB_PIN)
#define IMU_INTM_PIN                GPIO_Pin_1

static void IMU_SetSpeed( uint8_t speedSel )
{
  SPI_InitTypeDef SPI_InitStruct;

  SPI_I2S_DeInit(IMU_SPIx);

  SPI_InitStruct.SPI_Mode              = SPI_Mode_Master;
  SPI_InitStruct.SPI_Direction         = SPI_Direction_2Lines_FullDuplex;
  SPI_InitStruct.SPI_DataSize          = SPI_DataSize_8b;
  SPI_InitStruct.SPI_CPOL              = SPI_CPOL_High;
  SPI_InitStruct.SPI_CPHA              = SPI_CPHA_2Edge;
  SPI_InitStruct.SPI_NSS               = SPI_NSS_Soft;
  SPI_InitStruct.SPI_BaudRatePrescaler = speedSel;
  SPI_InitStruct.SPI_FirstBit          = SPI_FirstBit_MSB;
  SPI_InitStruct.SPI_CRCPolynomial     = 7;
  SPI_Init(IMU_SPIx, &SPI_InitStruct);

  SPI_Cmd(IMU_SPIx, ENABLE); 
}

void IMU_Config( void )
{
  GPIO_InitTypeDef GPIO_InitStruct;
  SPI_InitTypeDef SPI_InitStruct;
//  NVIC_InitTypeDef NVIC_InitStruct;
//  EXTI_InitTypeDef EXTI_InitStruct;

  /* SPI Clk ******************************************************************/
  IMU_SPIx_CLK_ENABLE();

  /* SPI AF *******************************************************************/
  GPIO_PinAFConfig(IMU_SCK_GPIO_PORT, IMU_SCK_SOURCE, IMU_SCK_AF);
  GPIO_PinAFConfig(IMU_SDO_GPIO_PORT, IMU_SDO_SOURCE, IMU_SDO_AF);    
  GPIO_PinAFConfig(IMU_SDI_GPIO_PORT, IMU_SDI_SOURCE, IMU_SDI_AF);

  /* SPI Pin ******************************************************************/
  GPIO_InitStruct.GPIO_Mode  = GPIO_Mode_OUT;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_100MHz;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_PuPd  = GPIO_PuPd_UP;

  GPIO_InitStruct.GPIO_Pin   = IMU_CSM_PIN;
  GPIO_Init(IMU_CSM_GPIO_PORT, &GPIO_InitStruct);

//#if defined(__USE_BAROMETER)
  GPIO_InitStruct.GPIO_Pin   = IMU_CSB_PIN;
  GPIO_Init(IMU_CSB_GPIO_PORT, &GPIO_InitStruct);
//#endif

  GPIO_InitStruct.GPIO_Mode  = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_100MHz;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_PuPd  = GPIO_PuPd_UP;

  GPIO_InitStruct.GPIO_Pin   = IMU_SCK_PIN;
  GPIO_Init(IMU_SCK_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.GPIO_Pin   = IMU_SDO_PIN;
  GPIO_Init(IMU_SDO_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.GPIO_Pin   = IMU_SDI_PIN;
  GPIO_Init(IMU_SDI_GPIO_PORT, &GPIO_InitStruct);

//  GPIO_InitStruct.GPIO_Mode  = GPIO_Mode_IN;
//  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_100MHz;
//  GPIO_InitStruct.GPIO_OType = GPIO_OType_OD;
//  GPIO_InitStruct.GPIO_PuPd  = GPIO_PuPd_NOPULL;

//  GPIO_InitStruct.GPIO_Pin   = IMU_INTM_PIN;
//  GPIO_Init(IMU_INTM_GPIO_PORT, &GPIO_InitStruct);

//  GPIO_InitStruct.GPIO_Pin   = IMU_INTB_PIN;
//  GPIO_Init(IMU_INTB_GPIO_PORT, &GPIO_InitStruct);

  IMU_CSM_H();  // LOW ENABLE
//#if defined(__USE_BAROMETER)
  IMU_CSB_H();  // LOW ENABLE
//#endif

  /* INT NVIC ****************************************************************/
//  NVIC_PriorityGroupConfig(NVIC_PriorityGroup_2);
//  NVIC_InitStruct.NVIC_IRQChannel                   = SPIx_INT_IRQ;
//  NVIC_InitStruct.NVIC_IRQChannelPreemptionPriority = 1;
//  NVIC_InitStruct.NVIC_IRQChannelSubPriority        = 0;
//  NVIC_InitStruct.NVIC_IRQChannelCmd                = ENABLE;
//  NVIC_Init(&NVIC_InitStruct);

  /* INT EXTI ****************************************************************/
//  SYSCFG_EXTILineConfig(EXTI_PortSourceGPIOA, SPIx_INT_SOURCE);
//  EXTI_InitStruct.EXTI_Line    = SPIx_INT_LINE;
//  EXTI_InitStruct.EXTI_Mode    = EXTI_Mode_Interrupt;
//  EXTI_InitStruct.EXTI_Trigger = EXTI_Trigger_Rising;  
//  EXTI_InitStruct.EXTI_LineCmd = ENABLE;
//  EXTI_Init(&EXTI_InitStruct);

  /* SPI Init ****************************************************************/
  SPI_InitStruct.SPI_Mode              = SPI_Mode_Master;
  SPI_InitStruct.SPI_Direction         = SPI_Direction_2Lines_FullDuplex;
  SPI_InitStruct.SPI_DataSize          = SPI_DataSize_8b;
  SPI_InitStruct.SPI_CPOL              = SPI_CPOL_High;
  SPI_InitStruct.SPI_CPHA              = SPI_CPHA_2Edge;
  SPI_InitStruct.SPI_NSS               = SPI_NSS_Soft;
  SPI_InitStruct.SPI_BaudRatePrescaler = IMU_SPIx_SPEED_LOW;
  SPI_InitStruct.SPI_FirstBit          = SPI_FirstBit_MSB;
  SPI_InitStruct.SPI_CRCPolynomial     = 7;
  SPI_Init(IMU_SPIx, &SPI_InitStruct);

  SPI_Cmd(IMU_SPIx, ENABLE); 
}

int8_t IMU_Init( IMU_InitTypeDef *IMUx )
{
  int8_t status = ERROR;
  uint8_t MPU6500_InitData[MPU6500_InitRegNum][2] = {
    {0x80, MPU6500_PWR_MGMT_1},     /* [0]  Reset Device                  */
    {0x04, MPU6500_PWR_MGMT_1},     /* [1]  Clock Source                  */
    {0x10, MPU6500_INT_PIN_CFG},    /* [2]  Set INT_ANYRD_2CLEAR          */
    {0x01, MPU6500_INT_ENABLE},     /* [3]  Set RAW_RDY_EN                */
    {0x00, MPU6500_PWR_MGMT_2},     /* [4]  Enable Acc & Gyro             */
    {0x00, MPU6500_SMPLRT_DIV},     /* [5]  Sample Rate Divider           */
    {0x00, MPU6500_GYRO_CONFIG},    /* [6]  default : +-250dps            */
    {0x00, MPU6500_ACCEL_CONFIG},   /* [7]  default : +-2G                */
    {0x00, MPU6500_CONFIG},         /* [8]  default : GyrLPS_250Hz        */
    {0x00, MPU6500_ACCEL_CONFIG_2}, /* [9]  default : AccLPS_460Hz        */
    {0x30, MPU6500_USER_CTRL},      /* [10] Set I2C_MST_EN, I2C_IF_DIS    */
  };
  uint8_t AK8963_InitData[AK8963_InitRegNum][2] = {
    {0x01, AK8963_CNTL2},           /* [0]  Reset Device                  */
    {0x00, AK8963_CNTL1},           /* [1]  Power-down mode               */
    {0x0F, AK8963_CNTL1},           /* [2]  Fuse ROM access mode          */
                                    /*      Read sensitivity adjustment   */
    {0x00, AK8963_CNTL1},           /* [3]  Power-down mode               */
    {0x06, AK8963_CNTL1},           /* [4]  Continuous measurement mode 2 */
  };

  IMU_InitData(IMUx->Data);
  IMU_SetSensitivity(IMUx);

  MPU6500_InitData[6][0] = IMUx->Init.MPU_Gyr_FullScale;       /* [6] MPU6500_GYRO_CONFIG */
  MPU6500_InitData[7][0] = IMUx->Init.MPU_Acc_FullScale;       /* [7] MPU6500_ACCEL_CONFIG */
  MPU6500_InitData[8][0] = IMUx->Init.MPU_Gyr_LowPassFilter;   /* [8] MPU6500_CONFIG */
  MPU6500_InitData[9][0] = IMUx->Init.MPU_Acc_LowPassFilter;   /* [9] MPU6500_ACCEL_CONFIG_2 */

  for(uint32_t i = 0; i < MPU6500_InitRegNum; i++) {
    delay_ms(2);
    MPU9250_WriteReg(MPU6500_InitData[i][1], MPU6500_InitData[i][0]);
  }

  delay_ms(2);
  status = IMU_DeviceCheck(IMUx->Data);
  if(status != SUCCESS)
    return ERROR;

#if defined(__USE_MAGNETOMETER)
  uint8_t ASA[3] = {0};
  float32_t sensAdj[3] = {0};

  AK8963_InitData[4][0] |= IMUx->Init.MPU_Mag_FullScale;        /* [4] AK8963_CNTL1 */

  for(uint32_t i = 0; i < AK8963_InitRegNum; i++) {
    delay_ms(2);
    MPU9250_Mag_WriteReg(AK8963_InitData[i][1], AK8963_InitData[i][0]);
    if(i == 2) {  /* Read sensitivity adjustment values */
      delay_ms(2);
      MPU9250_Mag_ReadRegs(AK8963_ASAX, ASA, 3);
    }
  }

  for(uint8_t i = 0; i < 3; i++) {
    sensAdj[i] = (ASA[i] + 128) / 256.0;
    IMUx->Data->magScale[i] *= sensAdj[i];
  }
//  printf("ASA = %i, %i, %i\r\n", ASA[0], ASA[1], ASA[2]);
//  printf("sensAdj = %f, %f, %f\r\n", sensAdj[0], sensAdj[1], sensAdj[2]);

  delay_ms(2);
  MPU9250_WriteReg(MPU6500_I2C_MST_CTRL, 0x5D);
  delay_ms(2);
  MPU9250_WriteReg(MPU6500_I2C_SLV0_ADDR, AK8963_I2C_ADDR | 0x80);
  delay_ms(2);
  MPU9250_WriteReg(MPU6500_I2C_SLV0_REG, AK8963_ST1);
  delay_ms(2);
  MPU9250_WriteReg(MPU6500_I2C_SLV0_CTRL, MPU6500_I2C_SLVx_EN | 8);
  delay_ms(2);
  MPU9250_WriteReg(MPU6500_I2C_SLV4_CTRL, 0x09);
  delay_ms(2);
  MPU9250_WriteReg(MPU6500_I2C_MST_DELAY_CTRL, 0x81);
  delay_ms(100);
#endif

#if defined(__USE_BAROMETER)
//  for(uint8_t i = 0; i < LPS25H_InitRegNum; i++) {
//    Delay_1ms(2);
//    LPS25H_WriteReg(LPS25H_InitData[i][1], LPS25H_InitData[i][0]);
//  }
#endif

  IMU_SetSpeed(IMU_SPIx_SPEED_HIGH);
  delay_ms(10);

  return SUCCESS;
}

void IMU_SetSensitivity( IMU_InitTypeDef *IMUx )
{
  float64_t scale = 0.0;

  /* Set gyroscope sensitivity (dps/LSB) */
#if defined(__USE_GYROSCOPE)
  switch(IMUx->Init.MPU_Gyr_FullScale) {
    case MPU_GyrFS_250dps:    scale = 250.0;    break;
    case MPU_GyrFS_500dps:    scale = 500.0;    break;
    case MPU_GyrFS_1000dps:   scale = 1000.0;   break;
    case MPU_GyrFS_2000dps:   scale = 2000.0;   break;
    default:                  scale = 0.0;      break;
  }
  scale = scale / 32768.0;
  IMUx->Data->gyrScale[0] = scale;
  IMUx->Data->gyrScale[1] = scale;
  IMUx->Data->gyrScale[2] = scale;
#else
  IMUx->Data->gyrScale[0] = 0.0f;
  IMUx->Data->gyrScale[1] = 0.0f;
  IMUx->Data->gyrScale[2] = 0.0f;
#endif

  /* Set accelerometer sensitivity (g/LSB) */
#if defined(__USE_ACCELEROMETER)
  switch(IMUx->Init.MPU_Acc_FullScale) {
    case MPU_AccFS_2g:    scale = 2.0;    break;
    case MPU_AccFS_4g:    scale = 4.0;    break;
    case MPU_AccFS_8g:    scale = 8.0;    break;
    case MPU_AccFS_16g:   scale = 16.0;   break;
    default:              scale = 0.0f;   break;
  }
  scale = scale / 32768.0;
  IMUx->Data->accScale[0] = scale;
  IMUx->Data->accScale[1] = scale;
  IMUx->Data->accScale[2] = scale;
#else
  IMUx->Data->accScale[0] = 0.0f;
  IMUx->Data->accScale[1] = 0.0f;
  IMUx->Data->accScale[2] = 0.0f;
#endif

  /* Set magnetometer sensitivity (uT/LSB) */
#if defined(__USE_MAGNETOMETER)
  IMUx->Data->magScale[0] = 0.6;  /* +-4800uT */
  IMUx->Data->magScale[1] = 0.6;
  IMUx->Data->magScale[2] = 0.6;
#else
  IMUx->Data->magScale[0] = 0.0f;
  IMUx->Data->magScale[1] = 0.0f;
  IMUx->Data->magScale[2] = 0.0f;
#endif

  /* Set ictemperature sensitivity (degC/LSB) */
#if defined(__USE_ICTEMPERATURE)
  IMUx->Data->ictempScale  = 1.0 / 333.87;
  IMUx->Data->ictempOffset = 21.0f;
#else
  IMUx->Data->ictempScale  = 0.0f;
  IMUx->Data->ictempOffset = 0.0f;
#endif

  /* Set barometer sensitivity (degC/LSB, hPa/LSB) */
#if defined(__USE_BAROMETER)
  IMUx->Data->baroScale[0] = LPS25HB_T_degC;
  IMUx->Data->baroScale[1] = LPS25HB_P_hPa;
#else
  IMUx->Data->baroScale[0] = 0.0f;
  IMUx->Data->baroScale[1] = 0.0f;
#endif
}

void IMU_GetRawData( IMU_DataTypeDef *pIMU )
{
  uint8_t readBuf[22] = {0};

#if defined(__USE_MAGNETOMETER)
  MPU9250_ReadRegs(MPU6500_ACCEL_XOUT_H, readBuf, 22);    /* Read Gyr, Acc, Mag */
#else
  MPU9250_ReadRegs(MPU6500_ACCEL_XOUT_H, readBuf, 14);    /* Read Gyr, Acc */
#endif

  pIMU->gyrRaw[0] = (int16_t)(readBuf[8]  << 8) | readBuf[9];     /* Gyr.X */
  pIMU->gyrRaw[1] = (int16_t)(readBuf[10] << 8) | readBuf[11];    /* Gyr.Y */
  pIMU->gyrRaw[2] = (int16_t)(readBuf[12] << 8) | readBuf[13];    /* Gyr.Z */
  pIMU->accRaw[0] = (int16_t)(readBuf[0]  << 8) | readBuf[1];     /* Acc.X */
  pIMU->accRaw[1] = (int16_t)(readBuf[2]  << 8) | readBuf[3];     /* Acc.Y */
  pIMU->accRaw[2] = (int16_t)(readBuf[4]  << 8) | readBuf[5];     /* Acc.Z */
  pIMU->ictempRaw = (int16_t)(readBuf[6]  << 8) | readBuf[7];     /* ICTemp */

#if defined(__USE_MAGNETOMETER)
  if(!(!(readBuf[14] & AK8963_STATUS_DRDY) || (readBuf[14] & AK8963_STATUS_DOR) || (readBuf[21] & AK8963_STATUS_HOFL))) {
    pIMU->magRaw[0] = (int16_t)(readBuf[16] << 8) | readBuf[15];  /* Mag.X */
    pIMU->magRaw[1] = (int16_t)(readBuf[18] << 8) | readBuf[17];  /* Mag.Y */
    pIMU->magRaw[2] = (int16_t)(readBuf[20] << 8) | readBuf[19];  /* Mag.Z */
  }
#endif

#if defined(__USE_BAROMETER)
//  LPS25H_ReadReg(LPS25H_WHO_AM_I, );
#endif
}
