==> KitSprout/SmartIMU/Software/SIMU_Application_mahonyFilter/Program/modules/imu.c <==
#include "drivers\stm32f4_system.h"
#include "drivers\stm32f4_spi.h"
#include "modules\imu.h"
#include <stdio.h>
#include <string.h>
#define IMU_SPIx                SPI1
#define IMU_SPIx_CLK_ENABLE()   __HAL_RCC_SPI1_CLK_ENABLE()
#define IMU_SPIx_SPEED_HIGH     SPI_BAUDRATEPRESCALER_2
#define IMU_SPIx_SPEED_LOW      SPI_BAUDRATEPRESCALER_256
#define IMU_SCK_PIN             GPIO_PIN_5
#define IMU_SCK_GPIO_PORT       GPIOA
#define IMU_SCK_AF              GPIO_AF5_SPI1
#define IMU_SDO_PIN             GPIO_PIN_6
#define IMU_SDO_GPIO_PORT       GPIOA
#define IMU_SDO_AF              GPIO_AF5_SPI1
#define IMU_SDI_PIN             GPIO_PIN_7
#define IMU_SDI_GPIO_PORT       GPIOA
#define IMU_SDI_AF              GPIO_AF5_SPI1

static void IMU_SetSpeed( uint8_t speedSel )
{
  __HAL_SPI_DISABLE(&IMU_HandleStruct);
  IMU_HandleStruct.Init.BaudRatePrescaler = speedSel;
  HAL_SPI_Init(&IMU_HandleStruct);
  __HAL_SPI_ENABLE(&IMU_HandleStruct);
}

void IMU_Config( void )
{
  GPIO_InitTypeDef GPIO_InitStruct;

#if defined(__MPU92)
  MPU92_Config();
#endif

#if defined(__LPS22)
  LPS22_Config();
#endif

  /* SPI Clk ******************************************************************/
  IMU_SPIx_CLK_ENABLE();

  /* SPI Pin ******************************************************************/
  GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull      = GPIO_PULLUP;
  GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;

  GPIO_InitStruct.Pin       = IMU_SCK_PIN;
  GPIO_InitStruct.Alternate = IMU_SCK_AF;
  HAL_GPIO_Init(IMU_SCK_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = IMU_SDO_PIN;
  GPIO_InitStruct.Alternate = IMU_SCK_AF;
  HAL_GPIO_Init(IMU_SDO_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = IMU_SDI_PIN;
  GPIO_InitStruct.Alternate = IMU_SCK_AF;
  HAL_GPIO_Init(IMU_SDI_GPIO_PORT, &GPIO_InitStruct);

  /* SPI Init ****************************************************************/
  IMU_HandleStruct.Instance               = IMU_SPIx;
  IMU_HandleStruct.Init.Mode              = SPI_MODE_MASTER;
  IMU_HandleStruct.Init.Direction         = SPI_DIRECTION_2LINES;
  IMU_HandleStruct.Init.DataSize          = SPI_DATASIZE_8BIT;
  IMU_HandleStruct.Init.CLKPolarity       = SPI_POLARITY_HIGH;
  IMU_HandleStruct.Init.CLKPhase          = SPI_PHASE_2EDGE;
  IMU_HandleStruct.Init.NSS               = SPI_NSS_SOFT;
  IMU_HandleStruct.Init.BaudRatePrescaler = IMU_SPIx_SPEED_LOW;
  IMU_HandleStruct.Init.FirstBit          = SPI_FIRSTBIT_MSB;
  IMU_HandleStruct.Init.TIMode            = SPI_TIMODE_DISABLE;
  IMU_HandleStruct.Init.CRCCalculation    = SPI_CRCCALCULATION_ENABLE;
  IMU_HandleStruct.Init.CRCPolynomial     = 7;
  HAL_SPI_Init(&IMU_HandleStruct);

  __HAL_SPI_ENABLE(&IMU_HandleStruct);
}

int8_t IMU_Init( IMU_InitTypeDef *IMUx )
{
  int8_t status;

#if defined(__MPU92)
  status = MPU92_Init(&IMUx->InitMPU);
  if (status != SUCCESS) {
    return ERROR;
  }
#endif

#if defined(__LPS22)
  status = LPS22_Init(&IMUx->InitLPS);
  if (status != SUCCESS) {
    return ERROR;
  }
#endif

  IMU_SetSpeed(IMU_SPIx_SPEED_HIGH);
  delay_ms(10);

  IMU_InitData(IMUx->Data);
  IMU_SetSensitivity(IMUx);
  IMU_MergeScaleStrength(IMUx->Data);
//  IMU_MergeScaleCalib(IMUx->Data);

  return SUCCESS;
}

int8_t IMU_GetRawData( IMU_DataTypeDef *imux )
{
  int8_t status;
  int16_t data[10];

#if defined(__MPU92)
  status = MPU92_GetRawData(data);
  imux->gyrRaw[0] = data[0];    /* Gyr.X */
  imux->gyrRaw[1] = data[1];    /* Gyr.Y */
  imux->gyrRaw[2] = data[2];    /* Gyr.Z */
  imux->accRaw[0] = data[3];    /* Acc.X */
  imux->accRaw[1] = data[4];    /* Acc.Y */
  imux->accRaw[2] = data[5];    /* Acc.Z */
  imux->ictempRaw = data[6];    /* ICTemp */

#if defined(__USE_MAGNETOMETER)
  if (status == 1) {
    imux->magRaw[0] = data[7];  /* Mag.X */
    imux->magRaw[1] = data[8];  /* Mag.Y */
    imux->magRaw[2] = data[9];  /* Mag.Z */
  }
#endif
#endif

#if defined(__LPS22)
#if defined(__USE_BAROMETER)
  status = LPS22_GetRawData(data);
#endif
#endif
  return status;
}

static void IMU_SetSensitivity( IMU_InitTypeDef *IMUx )
{
  float32_t scale[5];

#if defined(__MPU92)
  MPU92_GetSensitivity(&IMUx->InitMPU, scale);

  /* Set gyroscope sensitivity (dps/LSB) */
  IMUx->Data->gyrScale[0] = scale[0];
  IMUx->Data->gyrScale[1] = scale[0];
  IMUx->Data->gyrScale[2] = scale[0];

  /* Set accelerometer sensitivity (g/LSB) */
  IMUx->Data->accScale[0] = scale[1];
  IMUx->Data->accScale[1] = scale[1];
  IMUx->Data->accScale[2] = scale[1];

  /* Set magnetometer sensitivity (uT/LSB) */
  IMUx->Data->magScale[0] = scale[2];
  IMUx->Data->magScale[1] = scale[2];
  IMUx->Data->magScale[2] = scale[2];

  /* Set ictemperature sensitivity (degC/LSB) */
  IMUx->Data->ictempScale  = scale[3];
  IMUx->Data->ictempOffset = scale[4];
#endif

#if defined(__LPS22)
  LPS22_GetSensitivity(&IMUx->InitLPS, scale);

  /* Set barometer sensitivity (degC/LSB, hPa/LSB) */
  IMUx->Data->baroScale[0] = scale[0];
  IMUx->Data->baroScale[1] = scale[1];
#endif
}
